# Lincode

./: .gitignore  CMakeLists.txt  data_convecter.py
algorithms/: CMakeLists.txt
algorithms/example/: CMakeLists.txt  test_combinationsOfSeparatingSets.cpp  test_func.cpp  test_sorts.cpp
algorithms/include/: algorithms.h  sorts.h  support_functions.h
algorithms/src/: CMakeLists.txt  sorts.cpp  support_functions.cpp
code_attacks/: CMakeLists.txt
code_attacks/example/: CMakeLists.txt  test_chizhov_borodin.cpp  test_concatenateRM_attack.cpp  test_decomposeShortenedCode.cpp  test_decomposeToColumnSets.cpp  test_extractFirstBlock.cpp  test_extractFirstPerm.cpp  test_findingBlock.cpp  test_findingBlockColumns.cpp  test_findingFirstBlock.cpp  test_findingFirstBlockColumns.cpp  test_hadPowerCounter.cpp  test_modRM_attack.cpp  test_modRM_remover.cpp  test_nodRM.cpp  test_permOfExtraction.cpp  test_rmReductor.cpp  test_secSeparatorByStat.cpp  test_secondSeparationAlgorithms.cpp  test_separateConcatenatedCodes.cpp  test_separatingGaussElimination.cpp
code_attacks/include/: code_attacks.h
code_attacks/src/: CMakeLists.txt  chizhov_borodin.cpp  code_attacks.cpp  concatenateRM_attack.cpp  hadPowerCounter.cpp  hadPowerCounterSelectors.cpp  hadPowerCounterTwice.cpp  minder_shokrollahi.cpp  modRM_attack.cpp  modRM_remover.cpp  secSeparatorByStat.cpp  separateConcatenatedCodes.cpp  separate_RM_blocks.cpp  testSSASubblocks.cpp
codes/: CMakeLists.txt
codes/example/: CMakeLists.txt  extract_pqsigRM_block.cpp  mcEliece.cpp  mcEliecePqsigRM.cpp  punctured_k_code.cpp  subblocks_structure.cpp  test.cpp  test_encoder.cpp  test_hadSquarePqsigRM.cpp  test_lincode.cpp  test_modRMParams.cpp  test_pqsigRM.cpp  test_rm.cpp  test_truncate.cpp
codes/include/: codes.h  encoder.h  linear_code.h  pqsigRM.h  rm_code.h
codes/src/: CMakeLists.txt  encoder.cpp  linear_code.cpp  linear_functions.cpp  pqsigRM.cpp  rm_code.cpp
matrix/: CMakeLists.txt
matrix/example/: CMakeLists.txt  test.cpp  test_constructors.cpp  test_file.cpp  test_insertRow.cpp  test_insertTriangle.cpp
matrix/include/: matrix.h
matrix/src/: CMakeLists.txt  matrix.cpp  matrix_constructors.cpp  matrix_convecters.cpp  matrix_functions.cpp
permutation/: CMakeLists.txt
permutation/include/: permutation.h
permutation/src/: CMakeLists.txt  permutation.cpp
rm_code/: CMakeLists.txt
rm_code/example/: CMakeLists.txt  test.cpp
rm_code/include/: rm_code.h
rm_code/src/: CMakeLists.txt
support_splitting/: CMakeLists.txt
support_splitting/example/: CMakeLists.txt  final.cpp  generated_tests.cpp  hardcored_tests.cpp  iterativeMaxRMSSA.cpp  manual_nstruct.cpp  manual_tests.cpp  pqsigRM_tests.cpp  refinderByPunct.cpp  researcherBySize.cpp  test_rmOnInvars.cpp  test_ssa.cpp  test_structruralNSSA.cpp  test_structruralSSA.cpp
support_splitting/example/inDeepTests/: pqsigRM_tests.cpp
support_splitting/include/: inDeepSSA.h  invariants.h  ssa.h  ssa_supports.h  ssa_test.h  support_splitting.h  test_printers.h
support_splitting/src/: CMakeLists.txt  inDeepInvariants.cpp  inDeepSSA.cpp  invariants.cpp  n-ssa_structure.cpp  ssa.cpp  ssaTestVersion.cpp  ssa_invariants.cpp  ssa_structure.cpp  ssa_supports.cpp  ssa_test.cpp  ssa_testVersion.cpp  testInDeepSSA.cpp  testSSA.cpp  test_printers.cpp
tests/: CMakeLists.txt
tests/algorithms/: CMakeLists.txt  test_classSplitter.cpp  test_func.cpp
tests/code_attacks/: CMakeLists.txt  pqsigRM_separation_experiments.cpp  test_chizhov_borodin.cpp  test_concatenateRM_attack.cpp  test_extractFirstBlock.cpp  test_findingCounter.cpp  test_lastStep.cpp  test_modRM_remover.cpp  test_rmReducer.cpp  test_separateConcatenatedCodes.cpp
tests/codes/: CMakeLists.txt  code_from_file.cpp  mcEliecePqsigRM.cpp  pqsigRM_separation_attack.cpp  pqsigRM_separation_experiments.cpp  punctured_k_code.cpp  subblocks_structure.cpp  test_hulls.cpp  test_lincode.cpp  test_maxRM.cpp  test_minRM.cpp  test_modRMParams.cpp  test_truncate.cpp
tests/matrix/: test.cpp
tests/support_splitting/: 2rBiggerCase.cpp  CMakeLists.txt  refinderByPunct.cpp  subblockCase.cpp
