link_libraries(code_attacks)
if (BUILD_TEST)
	add_executable(test_decomposeToColumnSets test_decomposeToColumnSets.cpp)
	add_executable(test_nodRM test_nodRM.cpp)
	add_executable(test_concatenateRM_attack test_concatenateRM_attack.cpp)
	add_executable(test_findingBlockColumns test_findingBlockColumns.cpp)
	add_executable(test_extractFirstBlock test_extractFirstBlock.cpp)
	add_executable(test_separatingGaussElimination test_separatingGaussElimination.cpp)
	add_executable(test_hadPowerCounter test_hadPowerCounter.cpp)
endif()
add_executable(test_rmReducer test_rmReducer.cpp)
add_executable(test_chizhov_borodin test_chizhov_borodin.cpp)
add_executable(test_modRM_attack test_modRM_attack.cpp)
add_executable(test_separateConcatenatedCodes test_separateConcatenatedCodes.cpp)