link_libraries(codes)
link_libraries(support_splitting)
add_executable(test_rm test_rm.cpp)
add_executable(test_pqsigRM test_pqsigRM.cpp)
add_executable(test_minRM test_minRM.cpp)
add_executable(test_hadPqsigRM test_hadSquarePqsigRM.cpp)
add_executable(test_lincode test_lincode.cpp)
add_executable(mcEliece mcEliecePqsigRM.cpp)
add_executable(multi_punct punctured_k_code.cpp)
add_executable(test_hulls test_hulls.cpp)