link_libraries(codes)
link_libraries(support_splitting)
if (BUILD_TEST)
	add_executable(test_rm test_rm.cpp)
	add_executable(test_pqsigRM test_pqsigRM.cpp)
	add_executable(test_minRM test_minRM.cpp)
	add_executable(test_maxRM test_maxRM.cpp)
	add_executable(test_hadPqsigRM test_hadSquarePqsigRM.cpp)
	add_executable(test_modRMParams test_modRMParams.cpp)
	add_executable(test_truncate test_truncate.cpp)
	add_executable(test_encoder test_encoder.cpp)
	add_executable(test_lincode test_lincode.cpp)
	add_executable(test_hulls test_hulls.cpp)
endif()
add_executable(mcEliece mcEliecePqsigRM.cpp)
add_executable(multi_punct punctured_k_code.cpp)
add_executable(code_file code_from_file.cpp)
add_executable(extract_pqsigRM extract_pqsigRM_block.cpp)
add_executable(subblocks_structure subblocks_structure.cpp)
add_executable(pqsigRM_separation_attack pqsigRM_separation_attack.cpp)
add_executable(pqsigRM_separation_experiments pqsigRM_separation_experiments.cpp)
